# fragments

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: yamdb_workflow.yml
infra/: docker-compose.yaml  init-letsencrypt.sh
infra/data/nginx/: default.conf
infra_local/: docker-compose.yml  nginx.conf
tests/: test_create.py  test_homework.py  test_post.py  test_posts_cache.py  test_posts_following.py  test_posts_forms.py  test_posts_models.py  test_posts_paginator.py  test_posts_urls.py  test_users_forms.py  test_users_urls.py  test_users_views.py  tests_posts_views.py
yatube/: Dockerfile  commands.sh  db.sqlite3  dump.json  requirements.txt
yatube/about/: tests.py  views.py
yatube/core/: models.py
yatube/core/context_processors/: year.py
yatube/posts/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
yatube/posts/migrations/: 0001_initial.py  0002_auto_20220228_1641.py  0003_auto_20220302_1649.py  0004_auto_20220302_1650.py  0005_auto_20220302_1653.py  0006_auto_20220302_1709.py  0007_auto_20220303_2019.py  0008_auto_20221225_2210.py
yatube/posts/tests/: const.py  test_cache.py  test_following.py  test_forms.py  test_models.py  test_paginator.py  test_urls.py  tests_views.py
yatube/static/css/: bootstrap.min.css  style.css
yatube/templates/: base.html
yatube/templates/about/: author.html  tech.html
yatube/templates/core/: 403.html  403csrf.html  404.html  500.html
yatube/templates/includes/: footer.html  form_body.html  header.html
yatube/templates/posts/: follow.html  group_list.html  index.html  post_detail.html  post_edit.html  profile.html
yatube/templates/posts/includes/: post_list.html  switcher.html
yatube/templates/users/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
yatube/users/: admin.py  forms.py  models.py  urls.py  views.py
yatube/users/migrations/: 0001_initial.py  0002_user_about.py
yatube/users/tests/: test_forms.py  test_urls.py  tests_views.py
yatube/yatube/: settings.py  urls.py  wsgi.py
