[tool.poetry]
name = "fragments"
version = "0.1.0"
description = "no description"
authors = ["Andrey Rasputin <rasputin21@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.7"
Django = "2.2.28"
mixer = "7.1.2"
Pillow = "9.3.0"
requests = "2.26.0"
#six = "1.16.0"
sorl-thumbnail = "12.7.0"
python-dotenv = "0.20.0"
django-debug-toolbar = "3.2.4"

pytest-django = { version = "4.4.0", optional = true }
pytest-pythonpath = { version = "0.7.3", optional = true }
pytest = { version = "6.2.4", optional = true }
Faker = { version = "12.0.1", optional = true }

psycopg2-binary = { version = "^2.8.6", optional = true }
gunicorn = { version = "20.0.4", optional = true }
asgiref = { version = "3.5.2", optional = true }


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
isort = "^5.11.3"
flake8 = "^5.0.4"
black = "^22.12.0"


[tool.poetry.extras]
server = ["gunicorn", "psycopg2-binary", "asgiref"]
tests = ["pytest-django", "pytest-pythonpath", "pytest", "Faker"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
